Add archi for internal ast
MINOR

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,6 @@ tags
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,vim,emacs,jetbrains,haskell
 
 .idea/*
+
+/koaky
+/glados
