Fix CICD Windows + release push double file
PATCH

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,19 +88,22 @@ jobs:
       - name: Build
         run: make
 
+      - name: Rename
+        run: mv koaky koaky-linux
+
       - name: Upload To Release
         if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload ${{ needs.release-create.outputs.release }} "./koaky#koaky-linux"
+          gh release upload ${{ needs.release-create.outputs.release }} "./koaky-linux"
 
       - name: Upload To Artifact
         if: github.ref != 'refs/heads/main'
         uses: actions/upload-artifact@v3
         with:
           name: koaky-linux
-          path: ./koaky
+          path: ./koaky-linux
 
   release-macos:
     runs-on: macos-latest
@@ -122,16 +125,19 @@ jobs:
       - name: Build
         run: make
 
+      - name: Rename
+        run: mv koaky koaky-macos
+
       - name: Upload To Release
         if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload ${{ needs.release-create.outputs.release }} "./koaky#koaky-macos"
+          gh release upload ${{ needs.release-create.outputs.release }} "./koaky-macos"
 
       - name: Upload To Artifact
         if: github.ref != 'refs/heads/main'
         uses: actions/upload-artifact@v3
         with:
           name: koaky-macos
-          path: ./koaky
+          path: ./koaky-macos
