--- a/.github/workflows/compil.yml
+++ b/.github/workflows/compil.yml
@@ -47,7 +47,7 @@ jobs:
         run: ./scripts/InstallDepsWindows.ps1
 
       - name: Compil
-        run: ./scripts/compil.ps1 --no-tidy
+        run: make
 
   linux-compil:
     runs-on: ubuntu-latest
