--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
           fi
 
   release-windows:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: [release-create]
 
     steps:
