--- a/.github/workflows/compil.yml
+++ b/.github/workflows/compil.yml
@@ -28,7 +28,7 @@ jobs:
             cmake:
               - 'Makefile'
 
-  windows-compil:
+  compil-windows:
     runs-on: windows-latest
     needs: [compil-check-job-run]
     if: needs.compil-check-job-run.outputs.combined
@@ -49,7 +49,7 @@ jobs:
       - name: Compil
         run: make
 
-  linux-compil:
+  compil-linux:
     runs-on: ubuntu-latest
     needs: [compil-check-job-run]
     if: needs.compil-check-job-run.outputs.combined
@@ -70,7 +70,7 @@ jobs:
       - name: Compil
         run: make
 
-  macos-compil:
+  compil-macos:
     runs-on: macos-latest
     needs: [compil-check-job-run]
     if: needs.compil-check-job-run.outputs.combined
