--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 on: [push]
 
 jobs:
-  deploy:
+  documentation:
     runs-on: ubuntu-latest
     permissions:
       contents: write  # To push a branch 
