Fix image name on CI
PATCH

--- a/.github/workflows/norm.yml
+++ b/.github/workflows/norm.yml
@@ -6,7 +6,7 @@ jobs:
 
   norm:
     runs-on: ubuntu-latest
-    image: ghcr.io/epitech/coding-style-checker:latest
+    container: ghcr.io/epitech/coding-style-checker:latest
 
     steps:
       - name: Checkout
