Add exit bad if coding style error
MINOR

--- a/.github/workflows/norm.yml
+++ b/.github/workflows/norm.yml
@@ -41,3 +41,9 @@ jobs:
         with:
           message-path: |
             lambdananas-reports.log
+
+      - name: Exit Status
+        run: |
+          if [ ${{ steps.isEmpty.outputs.isEmpty }} == 'false' ]; then
+            exit 1
+          fi
