--- a/koaky.cabal
+++ b/koaky.cabal
@@ -1,4 +1,4 @@
-cabal-version: 2.2
+cabal-version: 1.12
 
 -- This file has been generated from package.yaml by hpack version 0.36.0.
 --
@@ -7,12 +7,12 @@ cabal-version: 2.2
 name:           koaky
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/koaky#readme>
-homepage:       https://github.com/githubuser/koaky#readme
-bug-reports:    https://github.com/githubuser/koaky/issues
-author:         Author name here
+homepage:       https://github.com/X-R-G-B/koaky#readme
+bug-reports:    https://github.com/X-R-G-B/koaky/issues
+author:         @guillaumeAbel, @TTENSHII, @Saverio976
 maintainer:     example@example.com
-copyright:      2023 Author name here
-license:        BSD-3-Clause
+copyright:      2023 X-R-G-B
+license:        MIT
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/koaky
+  location: https://github.com/X-R-G-B/koaky
 
 library
   exposed-modules:
@@ -29,8 +29,6 @@ library
       ComputeAST
       TextToAST
   other-modules:
-      Paths_koaky
-  autogen-modules:
       Paths_koaky
   hs-source-dirs:
       src
@@ -42,8 +40,6 @@ library
 executable koaky-exe
   main-is: Main.hs
   other-modules:
-      Paths_koaky
-  autogen-modules:
       Paths_koaky
   hs-source-dirs:
       app
@@ -58,12 +54,12 @@ test-suite koaky-test
   main-is: Spec.hs
   other-modules:
       Paths_koaky
-  autogen-modules:
-      Paths_koaky
   hs-source-dirs:
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , koaky
+    , tasty
+    , tasty-hunit
   default-language: Haskell2010
