--- a/.github/workflows/compil.yml
+++ b/.github/workflows/compil.yml
@@ -25,7 +25,7 @@ jobs:
               - '.github/workflows/**'
             src:
               - '*.hs'
-            cmake:
+            make:
               - 'Makefile'
 
   compil-windows:
