--- a/stack.yaml
+++ b/stack.yaml
@@ -17,8 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2023-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/21/22.yaml
+resolver: lts-21.13
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -40,7 +39,10 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+- tasty-1.4.2.2
+- tasty-hunit-0.10.1
+- tasty-html-0.4.2.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
