--- a/package.yaml
+++ b/package.yaml
@@ -32,6 +32,9 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
+- -Wdefault
+- -W
+- -Woperator-whitespace
 
 library:
   source-dirs: src
