--- a/koaky.cabal
+++ b/koaky.cabal
@@ -26,13 +26,13 @@ source-repository head
 library
   exposed-modules:
       AST
-      ComputeAST
-      ComputeDeepLists
-      ComputeLists
-      Defines
-      Errors
-      Functions
-      Parser
+      Computing.ComputeAST
+      Computing.ComputeDeepLists
+      Computing.ComputeLists
+      Computing.Defines
+      Computing.Errors
+      Computing.Functions
+      Parsing.Parser
       Types
   other-modules:
       Paths_koaky
