--- a/lvtc/package.yaml
+++ b/lvtc/package.yaml
@@ -1,10 +1,10 @@
-name:                koaky
+name:                lvtc
 version:             0.1.0.0
-github:              "X-R-G-B/koaky"
-license:             MIT
-author:              "@guillaumeAbel, @TTENSHII, @Saverio976"
+github:              "githubuser/lvtc"
+license:             BSD-3-Clause
+author:              "Author name here"
 maintainer:          "example@example.com"
-copyright:           "2023 X-R-G-B"
+copyright:           "2023 Author name here"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/koaky#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/lvtc#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -32,15 +32,12 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
-- -Wdefault
-- -W
-- -Woperator-whitespace
 
 library:
   source-dirs: src
 
 executables:
-  koaky-exe:
+  lvtc-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -48,10 +45,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - koaky
+    - lvtc
 
 tests:
-  koaky-test:
+  lvtc-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -59,7 +56,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - koaky
-    - tasty
-    - tasty-hunit
-    - tasty-html
+    - lvtc
