--- a/lvtc/stack.yaml
+++ b/lvtc/stack.yaml
@@ -8,16 +8,17 @@
 # A snapshot resolver dictates the compiler version and the set of packages
 # to be used for project dependencies. For example:
 #
-# resolver: lts-21.13
-# resolver: nightly-2023-09-24
-# resolver: ghc-9.6.2
+# resolver: lts-3.5
+# resolver: nightly-2015-09-21
+# resolver: ghc-7.10.2
 #
 # The location of a snapshot can be provided as a file or url. Stack assumes
 # a snapshot provided as a file might change, whereas a url resource does not.
 #
 # resolver: ./custom-snapshot.yaml
-# resolver: https://example.com/snapshots/2023-01-01.yaml
-resolver: lts-21.13
+# resolver: https://example.com/snapshots/2018-01-01.yaml
+resolver:
+  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/22/0.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,10 +40,7 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-extra-deps:
-- tasty-1.4.2.2
-- tasty-hunit-0.10.1
-- tasty-html-0.4.2.1
+# extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
@@ -55,7 +53,7 @@ extra-deps:
 #
 # Require a specific version of Stack, using version ranges
 # require-stack-version: -any # Default
-# require-stack-version: ">=2.13"
+# require-stack-version: ">=2.11"
 #
 # Override the architecture used by Stack, especially useful on Windows
 # arch: i386
