--- a/lvtc/lvtc.cabal
+++ b/lvtc/lvtc.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,7 +25,10 @@ source-repository head
 
 library
   exposed-modules:
+      Expression
       Lib
+      Parser
+      ParseUtil
   other-modules:
       Paths_lvtc
   autogen-modules:
@@ -64,4 +67,6 @@ test-suite lvtc-test
   build-depends:
       base >=4.7 && <5
     , lvtc
+    , tasty
+    , tasty-hunit
   default-language: Haskell2010
