--- a/lvtrun/lvtrun.cabal
+++ b/lvtrun/lvtrun.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -35,11 +35,15 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , bytestring
   default-language: Haskell2010
 
 executable lvtrun-exe
   main-is: Main.hs
   other-modules:
+      WasmMod.Header
+      WasmMod.Module
+      WasmMod.Sections
       Paths_lvtrun
   autogen-modules:
       Paths_lvtrun
@@ -48,6 +52,7 @@ executable lvtrun-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , lvtrun
   default-language: Haskell2010
 
@@ -63,5 +68,6 @@ test-suite lvtrun-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , lvtrun
   default-language: Haskell2010
