--- a/lvtrun/stack.yaml
+++ b/lvtrun/stack.yaml
@@ -42,6 +42,7 @@ packages:
 #
 extra-deps:
   - bytestring-0.12.0.2
+  - binary-0.8.9.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
