add better error handler

--- a/lvtrun/lvtrun.cabal
+++ b/lvtrun/lvtrun.cabal
@@ -47,6 +47,7 @@ executable lvtrun-exe
       WasmMod.Leb128
       WasmMod.Module
       WasmMod.Sections
+      WasmMod.Sections.Types
       Paths_lvtrun
   autogen-modules:
       Paths_lvtrun
