Step 3rd parser lvt (#10)
* Rename lib file

* Add parser for one lvt instruction

* Add ;\n for all instruction

* Add AST

* Fix file location

* Add header

* Add exports

* Fix TypeValue

* Fix norm + returnValue

* Fix

* Fix type

* Fix export

* Merge remote-tracking branch 'origin/step4TypeCheck' into step-3rd-parser-lvt

* Fix lvtrun files compil

* Fix condition for parser

* Fix norm

* Fix func call for value

* Add operation priority

* Fix

---------

Co-authored-by: guillaume abel <guillaume.abel@epitech.eu>

--- a/lvtc/lvtc.cabal
+++ b/lvtc/lvtc.cabal
@@ -26,10 +26,13 @@ source-repository head
 library
   exposed-modules:
       Alias
+      AST
       Expression
       Lib
+      ParseLvt
       Parser
       ParseUtil
+      ShuntingYard
   other-modules:
       Paths_lvtc
   autogen-modules:
@@ -59,6 +62,8 @@ test-suite lvtc-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      UTParseLvt
+      UTShuntingYard
       Paths_lvtc
   autogen-modules:
       Paths_lvtc
