--- a/lvtc/lvtc.cabal
+++ b/lvtc/lvtc.cabal
@@ -30,6 +30,7 @@ library
       Builtins
       Expression
       Lib
+      LvtLibVersion
       ParseLvt
       Parser
       ParseUtil
@@ -49,6 +50,9 @@ library
 executable lvtc-exe
   main-is: Main.hs
   other-modules:
+      Args
+      Run
+      Version
       Paths_lvtc
   autogen-modules:
       Paths_lvtc
@@ -57,6 +61,8 @@ executable lvtc-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , directory
+    , filepath
     , lvtc
   default-language: Haskell2010
 
@@ -76,6 +82,7 @@ test-suite lvtc-test
   build-depends:
       base >=4.7 && <5
     , lvtc
+    , process
     , tasty
     , tasty-hunit
   default-language: Haskell2010
