--- a/lvtc/stack.yaml
+++ b/lvtc/stack.yaml
@@ -43,6 +43,8 @@ packages:
 extra-deps:
 - tasty-1.4.2.2
 - tasty-hunit-0.10.1
+- directory-1.3.8.2
+- process-1.6.18.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
