--- a/lvtrun/lvtrun.cabal
+++ b/lvtrun/lvtrun.cabal
@@ -43,14 +43,16 @@ executable lvtrun-exe
   main-is: Main.hs
   other-modules:
       Errors
+      IO
+      Leb128
+      Loader
+      Parsing.FuncTypes
+      Parsing.Global
+      Parsing.Header
+      Parsing.Memory
+      Parsing.Parser
+      Parsing.Sections
       Types
-      WasmMod.Header
-      WasmMod.Leb128
-      WasmMod.Module
-      WasmMod.Sections
-      WasmMod.Sections.Global
-      WasmMod.Sections.Memory
-      WasmMod.Sections.Types
       Paths_lvtrun
   autogen-modules:
       Paths_lvtrun
