--- a/lvtc/lvtc.cabal
+++ b/lvtc/lvtc.cabal
@@ -34,6 +34,8 @@ library
       Parser
       ParseUtil
       ShuntingYard
+      Wasm
+      WasmUtils
       WatAST
       WatLike
       WatLikeToWat
