Add write for wasm

--- a/lvtc/lvtc.cabal
+++ b/lvtc/lvtc.cabal
@@ -40,6 +40,7 @@ library
       WatLike
       WatLikeToWat
       WatToWasm
+      WriteWasm
   other-modules:
       Paths_lvtc
   autogen-modules:
@@ -49,6 +50,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , bytestring
   default-language: Haskell2010
 
 executable lvtc-exe
