--- a/lvtc/stack.yaml
+++ b/lvtc/stack.yaml
@@ -43,6 +43,7 @@ packages:
 extra-deps:
 - tasty-1.4.2.2
 - tasty-hunit-0.10.1
+- bytestring-0.12.0.2
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
