--- a/lvtc/stack.yaml
+++ b/lvtc/stack.yaml
@@ -44,6 +44,12 @@ extra-deps:
 - tasty-1.4.2.2
 - tasty-hunit-0.10.1
 - bytestring-0.12.0.2
+- unix-2.8.5.0
+- process-1.6.18.0
+- text-2.1
+- binary-0.8.9.1
+- directory-1.3.8.2
+- filepath-1.4.100.4
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
