--- a/lvtc/stack.yaml
+++ b/lvtc/stack.yaml
@@ -50,6 +50,8 @@ extra-deps:
 - binary-0.8.9.1
 - directory-1.3.8.2
 - filepath-1.4.100.4
+- Win32-2.13.4.0
+- time-1.12.2
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
