add better main

--- a/lvtrun/lvtrun.cabal
+++ b/lvtrun/lvtrun.cabal
@@ -56,6 +56,8 @@ executable lvtrun-exe
       Parsing.Parser
       Parsing.Sections
       Run.Functions
+      Run.Locals
+      Run.Stack
       Run.Start
       Run.Vm
       Types
